--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
     <head>
         <title>Diya Arun</title>
         <style>
+            h1 {
+                color: red
+            }
+            
             h2 {
                 color: salmon;
                 font-size: 60px;
