--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Diya Arun</title>
         <style>
             h1 {
-                color: salmon;
+                color: pink;
             }
             
             h2 {
