--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 margin: 50px;
                 border-radius: 70px;
                 box-shadow: 10px 10px 10px pink;
+                width: 80%;
             }
 
         </style>
