--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 border-radius: 70px;
                 box-shadow: 10px 10px 10px pink;
                 width: 80%;
+                border: 1px solid black; 
             }
 
         </style>
