--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </head>
     <body>
         <h1 style="font-size: 80px; text-align: center;">Hi.. I am Diya</h1>
-        <center><img style="border-radius: 60px" width=1400px src = "diya.jpg"></center>
+        <center><img style="border-radius: 60px; width: 80%" src="diya.jpg"></center>
         <div style="background-image: url('girlSayingHello.gif')">
             <h2 style="color:salmon">My Information</h2>
             <ul>
