--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <h1 style="font-size: 80px; text-align: center;">Hi.. I am Diya</h1>
-        <center><img style="border-radius: 60px; width: 90%" src="diya.jpg"></center>
+        <center><img style="border-radius: 60px; width: 85%" src="diya.jpg">
         <div style="background-image: url('girlSayingHello.gif')">
             <h2 style="color:salmon">My Information</h2>
             <ul>
@@ -59,5 +59,6 @@
                 <li>Coloring</li>
             </ul>
         </div>
+        </center>
     </body>
 </html>
