--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 box-shadow: 10px 10px 10px pink;
                 width: 70%;
                 border: 0px solid black; 
+                width: 100%;
+                align-items: center;
             }
 
         </style>
@@ -31,7 +33,7 @@
     </head>
     <body>
         <h1 style="font-size: 80px; text-align: center;">Hi.. I am Diya</h1>
-        <center><img style="border-radius: 60px; width: 85%" src="diya.jpg">
+        <center><img style="border-radius: 60px; width: 85%" src="diya.jpg"></center>
         <div style="background-image: url('girlSayingHello.gif')">
             <h2 style="color:salmon">My Information</h2>
             <ul>
@@ -59,6 +61,6 @@
                 <li>Coloring</li>
             </ul>
         </div>
-        </center>
+       
     </body>
 </html>
