--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
                 padding: 80px;
                 margin: 50px;
                 border-radius: 70px;
-                box-shadow: 10px 10px 10px pink;
                 border: 1px solid black; 
                 width: 85%;
-                align-items: center;
+                align-content: center;
             }
 
         </style>
