--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             }
             div {
                 padding: 80px;
-                margin: 50px;
+                margin-left: auto;
+                margin-right: auto;
                 border-radius: 70px;
-                border: 0px solid black; 
+                border: 1px solid black; 
                 width: 80%;
                 align-content: center;
             }
