--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 padding: 80px;
                 margin-left: auto;
                 margin-right: auto;
+                margin-top: 5px;            
                 border-radius: 70px;
-                border: 1px solid black; 
+                border: 0px solid black; 
                 width: 80%;
                 align-content: center;
             }
