--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2 style="color:salmon">Achievements</h2>
         <ul>
             <li>First prize in the Fashion Competition</li>
-            <li>I made personal website</li>
+            <li>I made a personal website</li>
             <li>I am learning coding </li>
             <li>I am learning dance</li>
         </ul>
