--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 border: 0px solid black; 
                 width: 80%;
                 align-content: center;
+                background-size: contain;
             }
 
         </style>
