--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 width: 80%;
                 align-content: center;
                 background-size: contain;
+                background-repeat: no-repeat;
             }
 
         </style>
