--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
         <div style="background-image: url('achievementHands.gif')">
         <h2 style="color:salmon">Achievements</h2>
-        <ul>
-            <li>First prize in the Fashion Competition</li>
+        <ul>         
             <li>I made a personal website</li>
+            <li>First prize in Fashion Competition</li>
             <li>I am learning coding </li>
             <li>I am learning dance</li>
         </ul>
