--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             body {
                 background-color: lightsalmon;
                 font-family: 'Trebuchet MS', sans-serif;
+                margin: 10px;
             }
             li {
                 font-size: 30px;
