--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             body {
                 background-color: lightsalmon;
                 font-family: 'Trebuchet MS', sans-serif;
-                padding: 10px;
+                padding-top: 20px;
+                padding-bottom: 20px;
             }
             li {
                 font-size: 30px;
